--- a/edmunds/src/main/AndroidManifest.xml
+++ b/edmunds/src/main/AndroidManifest.xml
@@ -2,13 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pl.chiqvito.edmunds">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".EdmundsApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activity.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
