--- a/edmunds/build.gradle
+++ b/edmunds/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.support:recyclerview-v7:22.0.0'
     compile 'de.greenrobot:eventbus:2.4.0'
+    compile 'com.jakewharton:disklrucache:2.0.2'
 }
